--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@ body.theme-dark .scrollBox p{
       <div class="brand">
         <div class="logo" aria-label="Company Logo">
           <!-- Embedded logo (you said you'll provide; already placed here). Replace if needed. -->
-          <img alt="RDX" src="C:\Users\istifa.ali\Desktop\1x1 RDX.png" />
+          <img alt="RDX" src="1x1 RDX.png" />
         </div>
         <div class="titleBlock">
           <h1>COSMO–Rufus Content Upgrade Dashboard</h1>
@@ -1586,4 +1586,5 @@ hand circumference size chart (S–XL), care + ventilated storage, sparring guar
   </script>
 </body>
 </html>
+
 
